--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,11 @@
 {
+  "name": "default",
   "type": "postgres",
-  "host": "localhost",
-  "port": 5432,
   "username": "postgres",
-  "password": "admin",
+  "password": "postgres",
   "database": "test-db",
+  "host": "db",
+  "port": 5432,
   "synchronize": true,
   "logging": true,
   "entities": [
