--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
     "apollo-server-express": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.9.1",
@@ -20,6 +19,7 @@
     "typeorm": "^0.2.11"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.8",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
@@ -32,6 +32,7 @@
     "typescript": "^3.2.2"
   },
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc -b"
   }
 }
