--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "class-validator": "^0.9.1",
     "connect-redis": "^3.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "graphql": "^14.1.0",
@@ -22,6 +23,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.8",
     "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
     "@types/ioredis": "^4.0.4",
