--- a/package.json
+++ b/package.json
@@ -4,20 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "apollo-server-express": "^2.3.1",
+    "apollo-server-express": "^2.11.0",
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.9.1",
-    "connect-redis": "^3.4.0",
+    "class-validator": "^0.11.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "graphql": "^14.1.0",
-    "ioredis": "^4.3.0",
-    "pg": "^7.8.0",
+    "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.16.0",
-    "typeorm": "^0.2.11"
+    "type-graphql": "^0.17.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
