--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "typescript": "^3.2.2"
   },
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "start": "node ./dist/src/index.js",
     "build": "tsc -b"
   }
 }
