--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-express": "^2.11.0",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
@@ -12,9 +13,11 @@
     "express": "^4.17.1",
     "graphql": "^14.6.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.17.6"
+    "type-graphql": "^0.17.6",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.8.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.8",
     "@types/cors": "^2.8.4",
@@ -22,15 +25,25 @@
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
     "@types/ioredis": "^4.0.4",
+    "@types/jest": "^25.1.4",
     "@types/node": "^10.12.18",
+    "jest": "^25.1.0",
+    "nock": "^12.0.2",
     "prettier": "^1.15.3",
-    "ts-node": "^7.0.1",
-    "ts-node-dev": "^1.0.0-pre.32",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.6.2",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.2.2"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev --respawn --clear src/index.ts",
     "start": "node ./dist/src/index.js",
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "test": "jest --detectOpenHandles --verbose",
+    "test:cov": "jest --coverage"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
